ingress/dp-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
      - name: shopping
        image: amansingh12/shopping_page:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-service
spec:
  selector:
    app: service1
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
