ingress/dp-3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: httpd
        image: httpd:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  selector:
    app: test
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
